--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     </head>
 
-    <body style="background-color:powderblue;">
+    <body style="background-image:url('pictures/globe.png');">
         <div style="text-align: center;">
             <h1>Top 5 Exiting Sites That i have visited</h1>
             <marquee behavior="scroll" direction="right" scrollamount ="10">Click on any image to explore furthere</marquee>
